feat: product hardening pass - 40 NSE equities universe, continuous conviction scoring, watchlist/alert validation, and end-to-end alert execution