@@ -8,15 +8,19 @@ import java.util.List;
 import java.util.Map;
 
 /**
- * Immutable result of the Conviction Score evaluation.
+ * Immutable result of the continuous Conviction Score evaluation.
  *
  * @param symbol               stock ticker symbol
- * @param score                composite score between 0.0 and 100.0
+ * @param score                composite score between 0.0 and 100.0 (rounded to 1 decimal place)
  * @param category             qualitative category (VERY_WEAK, WEAK, NEUTRAL, STRONG, VERY_STRONG)
- * @param trendContribution    weighted points contributed by trend/moving averages
- * @param momentumContribution weighted points contributed by price momentum
- * @param rsiContribution      weighted points contributed by RSI
- * @param volumeContribution   weighted points contributed by relative volume
+ * @param trendScore           continuous factor score for trend (0.0 - 100.0)
+ * @param momentumScore        continuous factor score for momentum (0.0 - 100.0)
+ * @param rsiScore             continuous factor score for RSI (0.0 - 100.0)
+ * @param volumeScore          continuous factor score for relative volume (0.0 - 100.0)
+ * @param trendContribution    weighted points contributed by trend (e.g. 0.25 * trendScore)
+ * @param momentumContribution weighted points contributed by momentum (e.g. 0.25 * momentumScore)
+ * @param rsiContribution      weighted points contributed by RSI (e.g. 0.25 * rsiScore)
+ * @param volumeContribution   weighted points contributed by volume (e.g. 0.25 * volumeScore)
  * @param explanations         human-readable explainable bullets
  * @param signals              map of component name to evaluated Signal
  * @param ready                true if sufficient indicator data was available
@@ -26,6 +30,10 @@ public record ConvictionScore(
         String symbol,
         double score,
         ScoreCategory category,
+        double trendScore,
+        double momentumScore,
+        double rsiScore,
+        double volumeScore,
         double trendContribution,
         double momentumContribution,
         double rsiContribution,
@@ -36,8 +44,8 @@ public record ConvictionScore(
         Instant timestamp
 ) {
     public ConvictionScore {
-        explanations = Collections.unmodifiableList(explanations);
-        signals = Collections.unmodifiableMap(signals);
+        explanations = explanations != null ? Collections.unmodifiableList(explanations) : List.of();
+        signals = signals != null ? Collections.unmodifiableMap(signals) : Map.of();
     }
 
     public static ConvictionScore notReady(String symbol, Instant timestamp) {
@@ -45,6 +53,10 @@ public record ConvictionScore(
                 symbol,
                 50.0,
                 ScoreCategory.NEUTRAL,
+                50.0,
+                50.0,
+                50.0,
+                50.0,
                 12.5,
                 12.5,
                 12.5,
